--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,26 @@
 {
-  "theme_color": "#e8384a",
-  "background_color": "#f2172e",
-  "display": "standalone",
-  "scope": "/",
-  "start_url": "/",
   "name": "Guess The Number",
   "short_name": "Guess It",
+  "description": "A fun number guessing game",
+  "start_url": "/",
+  "scope": "/",
+  "display": "standalone",
+  "background_color": "#f2172e",
+  "theme_color": "#e8384a",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
-  ]
+  ],
+  "prefer_related_applications": false
 }
