--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "next build && next export -o out",
-    "vercel-build": "next build && next export -o out",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next export -o out"
+    "lint": "next lint"
   },
   "dependencies": {
     "framer-motion": "^12.23.16",
