fix: update configuration for Vercel deployment

--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
+    "postbuild": "next export -o out",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:static": "next build && next export -o out"
   },
   "dependencies": {
     "framer-motion": "^12.23.16",
