--- a/vercel.json
+++ b/vercel.json
@@ -3,32 +3,40 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/next"
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "out"
+      }
     }
   ],
   "build": {
     "env": {
+      "NODE_ENV": "production",
       "NODE_OPTIONS": "--max-old-space-size=4096"
     }
   },
   "routes": [
     {
-      "src": "/_next/static/(?:[^/]+/pages|chunks|runtime|css|media)/.+\\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|json)$",
+      "src": "/_next/static/(.*)",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
       },
-      "continue": true
+      "dest": "/_next/static/$1"
     },
     {
       "src": "/(.*\\.(ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot|json))",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
       },
-      "continue": true
+      "dest": "/$1"
+    },
+    {
+      "src": "/",
+      "dest": "/index.html"
     },
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/index.html"
     }
   ]
 }
