--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postbuild": "next export -o out",
-    "start": "next start",
+    "export": "next export -o out",
+    "start": "npx serve out -p 3000",
     "lint": "next lint",
-    "build:static": "next build && next export -o out"
+    "build:static": "npm run build && npm run export"
   },
   "dependencies": {
     "framer-motion": "^12.23.16",
