--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,8 @@
     "env": {
       "NODE_ENV": "production",
       "NODE_OPTIONS": "--max-old-space-size=4096"
-    }
+    },
+    "output": "out"
   },
   "routes": [
     {
